# docs/swagger/swagger.json
@@ -27,7 +27,22 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/v1.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/v1.PackageResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
@@ -58,7 +73,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.createPackageRequest"
+                            "$ref": "#/definitions/v1.PackageRequest"
                         }
                     }
                 ],
@@ -66,13 +81,77 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/v1.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/v1.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.PackageResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/v1.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/packages/{packageID}": {
+            "get": {
+                "description": "Returns package by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "packages"
+                ],
+                "summary": "Get package",
+                "operationId": "getPackage",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "6155c774-d1e2-4816-b7f4-52ebb949f044",
+                        "description": "package ID",
+                        "name": "packageID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/v1.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.PackageResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "500": {
@@ -98,12 +177,20 @@
                 "operationId": "updatePackage",
                 "parameters": [
                     {
+                        "type": "string",
+                        "example": "6155c774-d1e2-4816-b7f4-52ebb949f044",
+                        "description": "package ID",
+                        "name": "packageID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "User data",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.createPackageRequest"
+                            "$ref": "#/definitions/v1.PackageRequest"
                         }
                     }
                 ],
@@ -111,7 +198,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/v1.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.PackageResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -252,7 +351,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/v1.registerUserResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/v1.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.registerUserResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -299,7 +410,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/v1.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/v1.updateUserResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -319,6 +442,62 @@
         }
     },
     "definitions": {
+        "v1.PackageRequest": {
+            "type": "object",
+            "required": [
+                "height",
+                "name",
+                "weight",
+                "width"
+            ],
+            "properties": {
+                "height": {
+                    "type": "number",
+                    "example": 15
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Package for Moxem"
+                },
+                "weight": {
+                    "type": "number",
+                    "example": 11.3
+                },
+                "width": {
+                    "type": "number",
+                    "example": 13.8
+                }
+            }
+        },
+        "v1.PackageResponse": {
+            "type": "object",
+            "properties": {
+                "height": {
+                    "type": "number",
+                    "example": 15
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Package for Moxem"
+                },
+                "ownerID": {
+                    "type": "string",
+                    "example": "P1873eecd-c2d0-4aa2-a8d4-e0de232c5ac6"
+                },
+                "packageID": {
+                    "type": "string",
+                    "example": "6155c774-d1e2-4816-b7f4-52ebb949f044"
+                },
+                "weight": {
+                    "type": "number",
+                    "example": 11.3
+                },
+                "width": {
+                    "type": "number",
+                    "example": 13.8
+                }
+            }
+        },
         "v1.Response": {
             "type": "object",
             "properties": {
@@ -348,33 +527,6 @@
                     "maxLength": 50,
                     "minLength": 8,
                     "example": "qwerty123"
-                }
-            }
-        },
-        "v1.createPackageRequest": {
-            "type": "object",
-            "required": [
-                "height",
-                "name",
-                "weight",
-                "width"
-            ],
-            "properties": {
-                "height": {
-                    "type": "number",
-                    "example": 15
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Package for Moxem"
-                },
-                "weight": {
-                    "type": "number",
-                    "example": 11.3
-                },
-                "width": {
-                    "type": "number",
-                    "example": 13.8
                 }
             }
         },
@@ -485,6 +637,38 @@
                     "maxLength": 50,
                     "minLength": 8,
                     "example": "qwerty123"
+                }
+            }
+        },
+        "v1.updateUserResponse": {
+            "type": "object",
+            "required": [
+                "deliveryAddress",
+                "email",
+                "id",
+                "lastName",
+                "name"
+            ],
+            "properties": {
+                "deliveryAddress": {
+                    "type": "string",
+                    "example": "Pushkina street"
+                },
+                "email": {
+                    "type": "string",
+                    "example": "vadiminmail@gmail.com"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "d9e48656-ae36-4fde-af78-5f6250e11ead"
+                },
+                "lastName": {
+                    "type": "string",
+                    "example": "Valov"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Vadim"
                 }
             }
         }
